--- a/index.html
+++ b/index.html
@@ -23,24 +23,39 @@
 <a id="Краткое-введение-в-fsharp" class="anchor" href="#%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5-%D0%B2%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B2-fsharp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Краткое введение в FSharp</h1>
 
 <h2>
+<a id="Введение" class="anchor" href="#%D0%92%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Введение</h2>
+
+<p><strong>F#</strong> (эф-шарп) разработан в <em>Microsoft Corporation</em> в 2005 году. Информация о языке и необходимое програмное обеспечение доступно по адресу <a href="">http://fsharp.org</a>. Имеется поддержка языка в популярном пакете разработчика <em>Visual Studio</em>, он также доступен для <em>Linux</em> и <em>Mac OS X</em>.</p>
+
+<h2>
 <a id="Особенности-программирования-на-fsharp" class="anchor" href="#%D0%9E%D1%81%D0%BE%D0%B1%D0%B5%D0%BD%D0%BD%D0%BE%D1%81%D1%82%D0%B8-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BD%D0%B0-fsharp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Особенности программирования на FSharp</h2>
 
 <ul>
-<li>основное назначение языка: программирование в функциональном стиле</li>
-<li>отступы и пробелы имеют значение при форматировании кода</li>
-<li>доступно окно интерпретатора, в котором можно выполнить команды (REPL)</li>
-<li>язык F# многое взял от <strong>OCaml</strong>
-</li>
-<li>доступны типы и библиотека .NET</li>
+<li>основное назначение языка: программирование в функциональном стиле, но есть поддержка императивного и объектно-ориентированного стилей;</li>
+<li>отступы и пробелы имеют значение при форматировании кода;</li>
+<li>доступен режим интерпретатора, в котором можно выполнить команды (REPL), но можно использовать традиционный компилятор для получения исполняемого файла;</li>
+<li>язык F# многое взял от <strong>OCaml</strong>;</li>
+<li>доступны типы и библиотека .NET;</li>
+<li>язык имеет строгую типизацию.</li>
 </ul>
 
-<p><em>Все дальнейшие примеры приведены для интерактивной оболочки. Символ '&gt;' всегда обозначает приглашение интерпретатора и не набирается пользователем</em></p>
+<p><strong>Замечание</strong>
+<em>Все дальнейшие примеры приведены для интерактивной оболочки. Символ '&gt;' всегда обозначает приглашение интерпретатора и не набирается пользователем</em></p>
+
+<h2>
+<a id="repl" class="anchor" href="#repl" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>REPL</h2>
+
+<p>При использовании <strong>MS Visual Studio</strong> можно открыть окно <strong>F# interactive</strong> и вводить команды. Можно выделить в программе текст и послать его в REPL комбинацией: <em>Alt+Enter</em>.</p>
+
+<p>Вне <em>Visual Studio</em> запустить интерпретатор можно программой <em>fsi</em>.</p>
 
 <h2>
 <a id="Пример-использования-net" class="anchor" href="#%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80-%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-net" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Пример использования .NET</h2>
 
-<div class="highlight highlight-source-fsharp"><pre><span class="pl-k">&gt;</span><span class="pl-k">open</span> <span class="pl-en">System</span> <span class="pl-k">;;</span>
-<span class="pl-k">&gt;</span><span class="pl-k">let</span> <span class="pl-smi">now</span> <span class="pl-k">=</span> DateTime.Now <span class="pl-k">;;</span></pre></div>
+<div class="highlight highlight-source-fsharp"><pre><span class="pl-k">&gt;</span> <span class="pl-k">open</span> <span class="pl-en">System</span>;;
+<span class="pl-k">&gt;</span> <span class="pl-k">let</span> <span class="pl-smi">now</span> <span class="pl-k">=</span> DateTime.Now<span class="pl-k">;;</span>
+
+<span class="pl-k">val</span> <span class="pl-smi">now</span> : <span class="pl-v">DateTime</span> <span class="pl-k">=</span> <span class="pl-c1">06.11</span>.<span class="pl-c1">2016</span> <span class="pl-c1">15</span><span class="pl-k">:</span><span class="pl-c1">29</span><span class="pl-k">:</span><span class="pl-c1">42</span></pre></div>
 
 <h2>
 <a id="Комментарии" class="anchor" href="#%D0%9A%D0%BE%D0%BC%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%80%D0%B8%D0%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Комментарии</h2>
@@ -52,14 +67,10 @@
 <span class="pl-c"><span class="pl-c">*)</span></span></pre></div>
 
 <h2>
-<a id="repl" class="anchor" href="#repl" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>REPL</h2>
+<a id="Данные" class="anchor" href="#%D0%94%D0%B0%D0%BD%D0%BD%D1%8B%D0%B5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Данные</h2>
 
-<p>При использовании <strong>MS Visual Studio</strong> можно открыть окно <strong>F# interactive</strong> и вводить команды. Можно выделить в программе текст и послать его в REPL комбинацией: <em>Alt+Enter</em>.</p>
-
-<p>Вне <em>Visual Studio</em> запустить интерпретатор можно программой <em>fsi</em>.</p>
-
-<h2>
-<a id="Стандартные-типы" class="anchor" href="#%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D0%BD%D1%8B%D0%B5-%D1%82%D0%B8%D0%BF%D1%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Стандартные типы</h2>
+<h3>
+<a id="Стандартные-типы" class="anchor" href="#%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D0%BD%D1%8B%D0%B5-%D1%82%D0%B8%D0%BF%D1%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Стандартные типы</h3>
 
 <p>Ниже перечислены основные типы с указанием суффиксов при связывании значений с именами:</p>
 
@@ -88,6 +99,11 @@
 <strong>decimal</strong> - <em>M</em> - вещественное фиксированной точности (28 цифр после запятой)</li>
 </ul>
 
+<h3>
+<a id="Присвоение-значений" class="anchor" href="#%D0%9F%D1%80%D0%B8%D1%81%D0%B2%D0%BE%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B7%D0%BD%D0%B0%D1%87%D0%B5%D0%BD%D0%B8%D0%B9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Присвоение значений</h3>
+
+<p>Поскольку <strong>F#</strong> - функциональный язык, то переменные в классическом (императивном) смысле в нем не приветствуются. Просто вводится имя и этому имени присваивается значение, которое в дальнейшем не может быть изменено.</p>
+
 <p>Примеры создания значений:</p>
 
 <div class="highlight highlight-source-fsharp"><pre><span class="pl-k">let</span> <span class="pl-smi">a</span> <span class="pl-k">=</span> <span class="pl-c1">7</span>uy
@@ -99,26 +115,26 @@
 <div class="highlight highlight-source-fsharp"><pre><span class="pl-k">&gt;</span> <span class="pl-k">let</span> <span class="pl-smi">d</span> <span class="pl-k">=</span> <span class="pl-c1">2</span>UL <span class="pl-c1">56</span><span class="pl-k">;;</span>
 <span class="pl-k">val</span> <span class="pl-smi">b</span> : <span class="pl-v">uint64</span> <span class="pl-k">=</span> <span class="pl-c1">72057594037927936</span>UL</pre></div>
 
-<h2>
-<a id="Преобразования-типов" class="anchor" href="#%D0%9F%D1%80%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D1%82%D0%B8%D0%BF%D0%BE%D0%B2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Преобразования типов</h2>
+<h3>
+<a id="Преобразования-типов" class="anchor" href="#%D0%9F%D1%80%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D1%82%D0%B8%D0%BF%D0%BE%D0%B2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Преобразования типов</h3>
 
-<p>Явные преобразования типов необходимы, поскольку в языке отсутствуют неявные преобразования. </p>
+<p>Явные преобразования типов необходимы, поскольку в языке практически отсутствуют неявные преобразования. </p>
 
 <p>Функции преобразования имеют такие же названия, что и типы, например:</p>
 
 <div class="highlight highlight-source-fsharp"><pre><span class="pl-k">&gt;</span><span class="pl-k">let</span> <span class="pl-smi">e</span> <span class="pl-k">=</span> uint64 <span class="pl-c1">2</span><span class="pl-k">;;</span>
 <span class="pl-k">val</span> <span class="pl-smi">e</span> : <span class="pl-v">uint64</span> <span class="pl-k">=</span> <span class="pl-c1">2</span>UL</pre></div>
 
-<h2>
-<a id="Сверхдлинные-числа" class="anchor" href="#%D0%A1%D0%B2%D0%B5%D1%80%D1%85%D0%B4%D0%BB%D0%B8%D0%BD%D0%BD%D1%8B%D0%B5-%D1%87%D0%B8%D1%81%D0%BB%D0%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Сверхдлинные числа</h2>
+<h3>
+<a id="Сверхдлинные-числа" class="anchor" href="#%D0%A1%D0%B2%D0%B5%D1%80%D1%85%D0%B4%D0%BB%D0%B8%D0%BD%D0%BD%D1%8B%D0%B5-%D1%87%D0%B8%D1%81%D0%BB%D0%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Сверхдлинные числа</h3>
 
 <div class="highlight highlight-source-fsharp"><pre><span class="pl-k">&gt;</span><span class="pl-k">open</span> <span class="pl-en">System.<span class="pl-en">Numerics</span></span>;;
 <span class="pl-k">&gt;</span><span class="pl-k">let</span> <span class="pl-smi">f</span> <span class="pl-k">=</span> <span class="pl-c1">2</span>I <span class="pl-k">**</span> <span class="pl-c1">200</span> <span class="pl-k">;;</span>
 <span class="pl-k">val</span> <span class="pl-smi">f</span> : <span class="pl-v">BigInteger</span> <span class="pl-k">=</span> 
   <span class="pl-c1">16069380442589902755419620923411626.</span><span class="pl-k">......</span></pre></div>
 
-<h2>
-<a id="Символы-и-строки" class="anchor" href="#%D0%A1%D0%B8%D0%BC%D0%B2%D0%BE%D0%BB%D1%8B-%D0%B8-%D1%81%D1%82%D1%80%D0%BE%D0%BA%D0%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Символы и строки</h2>
+<h3>
+<a id="Символы-и-строки" class="anchor" href="#%D0%A1%D0%B8%D0%BC%D0%B2%D0%BE%D0%BB%D1%8B-%D0%B8-%D1%81%D1%82%D1%80%D0%BE%D0%BA%D0%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Символы и строки</h3>
 
 <p>Все символы хранятся в юникоде:</p>
 
@@ -133,6 +149,39 @@ vat it <span class="pl-k">:</span> int <span class="pl-k">=</span> <span class="
 <span class="pl-k">val</span> <span class="pl-smi">hello</span> : <span class="pl-v">string</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">"</span>hello, world!<span class="pl-pds">"</span></span>
 <span class="pl-k">&gt;</span> hello.<span class="pl-k">[</span><span class="pl-c1">1</span><span class="pl-k">]</span>
 <span class="pl-k">val</span> <span class="pl-smi">it</span> : <span class="pl-v">char</span> <span class="pl-k">=</span> <span class="pl-s">'e'</span></pre></div>
+
+<h2>
+<a id="Структуры-данных" class="anchor" href="#%D0%A1%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D1%8B-%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Структуры данных</h2>
+
+<p>В качестве <em>структур данных</em> выступают:</p>
+
+<ul>
+<li>списки (lists);</li>
+<li>кортежи (tupples);</li>
+<li>последовательности (sequences);;</li>
+</ul>
+
+<h3>
+<a id="Списки" class="anchor" href="#%D0%A1%D0%BF%D0%B8%D1%81%D0%BA%D0%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Списки</h3>
+
+<p>Списки являются основной структурой данных в функцинальных языках. </p>
+
+<p>Задать список легко:</p>
+
+<div class="highlight highlight-source-fsharp"><pre><span class="pl-k">&gt;</span><span class="pl-k">let</span> <span class="pl-smi">list</span> <span class="pl-k">=</span> <span class="pl-k">[</span><span class="pl-c1">1</span><span class="pl-k">;</span><span class="pl-c1">2</span><span class="pl-k">;</span><span class="pl-c1">3</span><span class="pl-k">];;</span>
+<span class="pl-k">val</span> <span class="pl-smi">list</span> : <span class="pl-v">int</span> <span class="pl-v">list</span> <span class="pl-k">=</span> <span class="pl-k">[</span><span class="pl-c1">1</span><span class="pl-k">;</span> <span class="pl-c1">2</span><span class="pl-k">;</span> <span class="pl-c1">3</span><span class="pl-k">]</span></pre></div>
+
+<p>Можно указывать диапазоны значений:</p>
+
+<div class="highlight highlight-source-fsharp"><pre><span class="pl-k">&gt;</span> <span class="pl-k">let</span> <span class="pl-smi">list</span> <span class="pl-k">=</span> <span class="pl-k">[</span><span class="pl-c1">1.</span>.<span class="pl-c1">10</span><span class="pl-k">];;</span>
+<span class="pl-k">val</span> <span class="pl-smi">list</span> : <span class="pl-v">int</span> <span class="pl-v">list</span> <span class="pl-k">=</span> <span class="pl-k">[</span><span class="pl-c1">1</span><span class="pl-k">;</span> <span class="pl-c1">2</span><span class="pl-k">;</span> <span class="pl-c1">3</span><span class="pl-k">;</span> <span class="pl-c1">4</span><span class="pl-k">;</span> <span class="pl-c1">5</span><span class="pl-k">;</span> <span class="pl-c1">6</span><span class="pl-k">;</span> <span class="pl-c1">7</span><span class="pl-k">;</span> <span class="pl-c1">8</span><span class="pl-k">;</span> <span class="pl-c1">9</span><span class="pl-k">;</span> <span class="pl-c1">10</span><span class="pl-k">]</span>
+
+<span class="pl-k">&gt;</span> <span class="pl-k">let</span> <span class="pl-smi">list</span> <span class="pl-k">=</span> <span class="pl-k">[</span><span class="pl-s">'a'</span><span class="pl-k">..</span><span class="pl-s">'z'</span><span class="pl-k">];;</span>
+<span class="pl-k">val</span> <span class="pl-smi">list</span> : <span class="pl-v">char</span> <span class="pl-v">list</span> <span class="pl-k">=</span>
+  <span class="pl-k">[</span><span class="pl-s">'a'</span><span class="pl-k">;</span> <span class="pl-s">'b'</span><span class="pl-k">;</span> <span class="pl-s">'c'</span><span class="pl-k">;</span> <span class="pl-s">'d'</span><span class="pl-k">;</span> <span class="pl-s">'e'</span><span class="pl-k">;</span> <span class="pl-s">'f'</span><span class="pl-k">;</span> <span class="pl-s">'g'</span><span class="pl-k">;</span> <span class="pl-s">'h'</span><span class="pl-k">;</span> <span class="pl-s">'i'</span><span class="pl-k">;</span> <span class="pl-s">'j'</span><span class="pl-k">;</span> <span class="pl-s">'k'</span><span class="pl-k">;</span> <span class="pl-s">'l'</span><span class="pl-k">;</span> <span class="pl-s">'m'</span><span class="pl-k">;</span> <span class="pl-s">'n'</span><span class="pl-k">;</span> <span class="pl-s">'o'</span><span class="pl-k">;</span>
+   <span class="pl-s">'p'</span><span class="pl-k">;</span> <span class="pl-s">'q'</span><span class="pl-k">;</span> <span class="pl-s">'r'</span><span class="pl-k">;</span> <span class="pl-s">'s'</span><span class="pl-k">;</span> <span class="pl-s">'t'</span><span class="pl-k">;</span> <span class="pl-s">'u'</span><span class="pl-k">;</span> <span class="pl-s">'v'</span><span class="pl-k">;</span> <span class="pl-s">'w'</span><span class="pl-k">;</span> <span class="pl-s">'x'</span><span class="pl-k">;</span> <span class="pl-s">'y'</span><span class="pl-k">;</span> <span class="pl-s">'z'</span><span class="pl-k">]</span></pre></div>
+
+<p>..</p>
 
 <h2>
 <a id="Функции" class="anchor" href="#%D0%A4%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Функции</h2>
@@ -162,6 +211,11 @@ vat it <span class="pl-k">:</span> int <span class="pl-k">=</span> <span class="
 <span class="pl-k">val</span> <span class="pl-smi">prn</span> : <span class="pl-v">'a</span> -&gt; <span class="pl-v">'a</span></pre></div>
 
 <p>В качестве обобщенного типа может использоваться любой тип. </p>
+
+<h3>
+<a id="Генераторы-списков" class="anchor" href="#%D0%93%D0%B5%D0%BD%D0%B5%D1%80%D0%B0%D1%82%D0%BE%D1%80%D1%8B-%D1%81%D0%BF%D0%B8%D1%81%D0%BA%D0%BE%D0%B2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Генераторы списков</h3>
+
+<p>Очень полезны <strong>генераторы</strong> (специальные функции для генерации значений):</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ashtanyuk/FSharp-tutorial">Fsharp-tutorial</a> is maintained by <a href="https://github.com/ashtanyuk">ashtanyuk</a>.</span>
